--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"vscode": "^1.23.0"
 	},
 	"activationEvents": [
-		"onLanguage:plaintext"
+		"onLanguage:html",
+		"onLanguage:xml"
 	],
 	"main": "./client/out/extension",
 	"contributes": {
