--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
 		"typescript": "^3.1.3"
 	},
 	"dependencies": {
-		"fs-extra": "^7.0.1"
+		"fs-extra": "^7.0.1",
+		"matcher": "^1.1.1",
+		"wildcard-match": "^1.1.0"
 	}
 }
