--- a/server/package.json
+++ b/server/package.json
@@ -1,18 +1,19 @@
 {
-	"name": "lsp-sample-server",
-	"description": "Example implementation of a language server in node.",
-	"version": "1.0.0",
-	"author": "Microsoft Corporation",
-	"license": "MIT",
-	"engines": {
-		"node": "*"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/Microsoft/vscode-extension-samples"
-	},
-	"dependencies": {
-		"vscode-languageserver": "^4.1.3"
-	},
-	"scripts": {}
+    "name": "angular-i18n-validator-server",
+    "description": "i18n validation for Angular 6 project",
+    "version": "1.0.0",
+    "author": "Oleksandr Reznichenko",
+    "license": "MIT",
+    "engines": {
+        "node": "*"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/rettoua/angular-i18n-validator"
+    },
+    "dependencies": {
+        "vscode-languageserver": "^4.1.3",
+        "matcher": "^1.1.1"
+    },
+    "scripts": {}
 }
