--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
         "postinstall": "vscode-install"
     },
     "dependencies": {
-        "vscode-languageclient": "^4.1.4"
+        "vscode-languageclient": "^4.1.4",
+        "node.extend": ">=1.1.7"
     },
     "devDependencies": {
         "vscode": "^1.1.21"
