--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
     "author": "Oleksandr Reznichenko",
     "license": "MIT",
     "version": "0.0.1",
-    "publisher": "rettoua",
+    "publisher": "OleksandrReznichenko",
     "repository": {
         "type": "git",
         "url": "https://github.com/rettoua/angular-i18n-validator"
