--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "type": "git",
         "url": "https://github.com/rettoua/angular-i18n-validator"
     },
-    "publisher": "rettoua",
+    "publisher": "OleksandrReznichenko",
     "categories": [],
     "keywords": [
         "multi-root ready"
@@ -21,31 +21,7 @@
         "onLanguage:xml"
     ],
     "main": "./client/out/extension",
-    "contributes": {
-        "configuration": {
-            "type": "object",
-            "title": "Example configuration",
-            "properties": {
-                "languageServerExample.maxNumberOfProblems": {
-                    "scope": "resource",
-                    "type": "number",
-                    "default": 100,
-                    "description": "Controls the maximum number of problems produced by the server."
-                },
-                "languageServerExample.trace.server": {
-                    "scope": "window",
-                    "type": "string",
-                    "enum": [
-                        "off",
-                        "messages",
-                        "verbose"
-                    ],
-                    "default": "off",
-                    "description": "Traces the communication between VS Code and the language server."
-                }
-            }
-        }
-    },
+    "contributes": {},
     "scripts": {
         "vscode:prepublish": "cd client && npm run update-vscode && cd .. && npm run compile",
         "compile": "tsc -b",
