--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
     "name": "angular-i18n-validator",
+    "displayName": "Angular 6+ i18n validation and more",
     "description": "i18n validation for Angular 6 project",
     "author": "Oleksandr Reznichenko",
     "license": "MIT",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "repository": {
         "type": "git",
         "url": "https://github.com/rettoua/angular-i18n-validator"
     },
     "publisher": "OleksandrReznichenko",
     "categories": [],
+    "icon": "images/icon.png",
     "keywords": [
         "multi-root ready"
     ],
